k8s-wasm-resources.yaml
 ---
 apiVersion: v1
 kind: Pod
 metadata:
   name: hello-wasm
 spec:
   containers:
   - name: hello-wasm
     image: webassembly.azurecr.io/hello-wasm:v1
   tolerations:
   - effect: NoExecute
     key: kubernetes.io/arch
     operator: Equal
#     value: wasm32-wasi   # or wasm32-wasmcloud according to module target arch
#   - effect: NoSchedule
#     key: kubernetes.io/arch
#     operator: Equal
#     value: wasm32-wasi
---
apiVersion: v1
kind: Pod
metadata:
  name: hyper-server
  labels:
    app: hyper-server
spec:
  containers:
    - name: hyper-server
      image: ghcr.io/georgenicoll/hyper-server:latest
      imagePullPolicy: Always
      args:
        - "8888"
  tolerations:
    - key: "node.kubernetes.io/network-unavailable"
      operator: "Exists"
      effect: "NoSchedule"
    - key: "kubernetes.io/arch"
      operator: "Equal"
      value: "wasm32-wasi"
      effect: "NoExecute"
    - key: "kubernetes.io/arch"
      operator: "Equal"
      value: "wasm32-wasi"
      effect: "NoSchedule"
---
